# howmuchdidilift

./: .dockerignore  .gitignore  Cargo.toml  dockerfile  fly.toml
config/: development.yaml  production.yaml  test.yaml
examples/: playground.rs
frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: tailwind.css
frontend/src/: api.rs  lib.rs  main.rs
frontend/src/components/: credentials.rs  mod.rs  navbar.rs
frontend/src/pages/: convert.rs  login.rs  measures.rs  mod.rs  register.rs
interface/: Cargo.toml
interface/src/: lib.rs
migration/src/: lib.rs  m20231224_205059_measures.rs  m20240101_213454_drop_singular_name.rs  m20240101_215625_rename_measure_name_column.rs
src/: app.rs
src/controllers/: auth.rs  measure.rs  mod.rs  user.rs
src/fixtures/: measures.yaml
src/models/: measures.rs  mod.rs  users.rs
src/models/_entities/: measures.rs  mod.rs  prelude.rs  users.rs
tests/models/: measures.rs  mod.rs  users.rs
tests/models/snapshots/: model@measures.snap
tests/requests/: auth.rs  measure.rs  mod.rs  notes.rs  prepare_data.rs  user.rs
tests/requests/snapshots/: can_convert_kgs@measure_request.snap  can_convert_lbs@measure_request.snap  can_create@measure_request.snap  can_delete@measure_request.snap  can_list@measure_request.snap  can_register@auth_request.snap  can_update@measure_request.snap
tests/tasks/: seed.rs
