[package]
name = "lift_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = {git = "https://github.com/leptos-rs/leptos", features=["csr", "nightly"]}
leptos_meta = {git = "https://github.com/leptos-rs/leptos", features=["csr", "nightly"]}
leptos_router = {git = "https://github.com/leptos-rs/leptos", features=["csr", "nightly"]}
#leptos = { version = "0.5.4", features = ["csr", "nightly"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
copy_dir = "0.1.3"

#leptos-use = "0.9.0"
#leptos_meta = "0.5.1"
#leptos_router = { version = "0.5.1", features = ["csr"] }
log = "0.4.20"
interface = { version = "0.1.0", path = "../interface" }
thiserror = "1.0.52"
gloo-net = "0.5.0"
anyhow = "1.0.76"
#leptos-struct-table = "0.6.0"
serde = { version = "1.0.193", features = ["derive"] }
gloo-storage = "0.3.0"
eyre = "0.6.11"
#thaw = { version = "0.1.5", features = ["leptos_meta"] }

